--- a/.env
+++ b/.env
@@ -15,4 +15,7 @@ AUTH0_CLIENT_SECRET="nMdTdEvqO-dCYzZX19R9nqkJqolC5P2jOTB6nthspV7igbDwykbLFgyPTvl
 #    -> Execute `gp url 5000` no terminal para confirmar se esta URL está correta.
 BASE_URL="https://5000-dimas0505-dinutri2-w7dkyyrwztl.ws-us121.gitpod.io"
 
-# login admi Email: admin@dinutri.com Senha: admin123456
+#ADMIN_EMAIL="seu-email@admin.com"
+ADMIN_PASSWORD="280765"
+ADMIN_FIRST_NAME="Admin"
+ADMIN_LAST_NAME="Principal"
