--- a/.env
+++ b/.env
@@ -15,6 +15,9 @@ AUTH0_CLIENT_SECRET="nMdTdEvqO-dCYzZX19R9nqkJqolC5P2jOTB6nthspV7igbDwykbLFgyPTvl
 #    -> Execute `gp url 5000` no terminal para confirmar se esta URL está correta.
 BASE_URL="https://5000-dimas0505-dinutri2-w7dkyyrwztl.ws-us121.gitpod.io"
 
+# 5. Token do Vercel Blob Storage
+BLOB_READ_WRITE_TOKEN="vercel_blob_rw_2OHUthxTykyRwKsq_aj8dXel9OipeHlYSY7cKQUxrCLxPpI"
+
 #ADMIN_EMAIL="seu-email@admin.com"
 ADMIN_PASSWORD="280765"
 ADMIN_FIRST_NAME="Admin"
