--- a/package.json
+++ b/package.json
@@ -47,8 +47,9 @@
     "@types/bcrypt": "^6.0.0",
     "@types/memoizee": "^0.4.12",
     "@types/uuid": "^10.0.0",
-    "@vercel/blob": "^1.1.1",
+    "@vercel/blob": "^0.23.0",
     "bcrypt": "^6.0.0",
+    "body-parser": "^1.20.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
@@ -93,6 +94,7 @@
     "@replit/vite-plugin-runtime-error-modal": "^0.0.3",
     "@tailwindcss/typography": "^0.5.15",
     "@tailwindcss/vite": "^4.1.3",
+    "@types/body-parser": "^1.19.5",
     "@types/connect-pg-simple": "^7.0.3",
     "@types/express": "4.17.21",
     "@types/express-session": "^1.18.0",
